--- a/src/components/BridgeItem/BridgeItem.css
+++ b/src/components/BridgeItem/BridgeItem.css
@@ -58,9 +58,10 @@
     justify-content: center;
   }
 
-  .firasans-normal-nobel-26px {
+  .font {
     color: rgba(181, 181, 181, 1);
-    font-family: 'Fira Sans';
+    /* font-family: 'Fira Sans'; */
+    font-family: 'Courier New', Courier, monospace;
     font-size: 26px;
     font-weight: 400;
     font-style: normal;
