--- a/src/components/bridge/BridgeItem/BridgeItem.css
+++ b/src/components/bridge/BridgeItem/BridgeItem.css
@@ -4,9 +4,11 @@
     height: 100px;
     position: relative;
     width: 400px;
+    padding: 5px;
+    user-select: none;
 }
   
-  .container {
+.container {
     align-items: center;
     background-color: #252529;
     border-radius: 50px;
@@ -15,54 +17,63 @@
     overflow: hidden;
     /* padding: 12px 27px; */
     width: 400px;
-  }
+}
+
+.container > * {
+	transition: all .2s ease-in-out;
+
+}
   
-  .icon {
-    padding-left: 15px;
+.icon {
+    margin-left: 15px;
     /* align-self: flex-end; */
     height: 75px;
     width: 75px;
-  }
+}
+
+.bridge-item:hover .icon {
+	transform: scale(0.9);
+}
   
-  .name {
+.name {
     height: 74px;
     letter-spacing: 0;
     margin-left: 45px;
     text-align: center;
     width: 160px;
-  }
+}
+
+.bridge-item:hover .name {
+	transform: scale(1.2)
+}
   
-  @import url("https://fonts.googleapis.com/css?family=Fira+Sans:400");
+ 
+
   
-  .screen a {
-    display: contents;
-    text-decoration: none;
-  }
-  
-  .container-center-horizontal {
-    display: flex;
+.center-horizontal {
+	display: flex;
     flex-direction: row;
     justify-content: center;
     pointer-events: none;
     width: 100%;
-  }
+}
   
-  .container-center-horizontal > * {
+.center-horizontal > * {
     flex-shrink: 0;
     pointer-events: auto;
-  }
+}
   
-  .valign-text-middle {
+.valign-text-middle {
     display: flex;
     flex-direction: column;
     justify-content: center;
-  }
+}
 
-  .font {
+.font {
     color: rgba(181, 181, 181, 1);
     /* font-family: 'Fira Sans'; */
     font-family: 'Courier New', Courier, monospace;
     font-size: 26px;
     font-weight: 400;
     font-style: normal;
-  }
+}
